make an attempt with protobuf to serialize and deserialize messages and a system to define commands and events

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,6 +7,13 @@ add_executable(toy-sequencer
 
 target_include_directories(toy-sequencer PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 
+# Generated protos for typed messages
+add_subdirectory(msg)
+
+if(TARGET msg_protos)
+    target_link_libraries(toy-sequencer PRIVATE msg_protos msg_protos_includes)
+endif()
+
 if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU" OR CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
     target_compile_options(toy-sequencer PRIVATE -Wall -Wextra -std=c++17)
 endif()
