--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -19,6 +19,9 @@ add_executable(test_sequencer_basic
 )
 target_link_libraries(test_sequencer_basic PRIVATE test_support)
 target_include_directories(test_sequencer_basic PRIVATE ${CMAKE_SOURCE_DIR}/src)
+if(TARGET msg_protos)
+    target_link_libraries(test_sequencer_basic PRIVATE msg_protos)
+endif()
 if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU" OR CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
     target_compile_options(test_sequencer_basic PRIVATE -Wall -Wextra -std=c++17)
 endif()
