--- a/src/msg/CMakeLists.txt
+++ b/src/msg/CMakeLists.txt
@@ -1,4 +1,4 @@
-find_package(Protobuf QUIET)
+find_package(Protobuf QUIET REQUIRED)
 
 if (Protobuf_FOUND)
   message(STATUS "Protobuf found: ${Protobuf_VERSION}")
@@ -26,7 +26,25 @@ if (Protobuf_FOUND)
   add_library(msg_protos STATIC ${GENERATED_CC})
   add_dependencies(msg_protos generate_msg_protos)
   target_include_directories(msg_protos PUBLIC ${Protobuf_INCLUDE_DIRS} ${GENERATED_DIR})
-  target_link_libraries(msg_protos PUBLIC ${Protobuf_LIBRARIES})
+  # Link against imported protobuf target to pull Abseil deps transitively
+  if(TARGET protobuf::libprotobuf)
+    target_link_libraries(msg_protos PUBLIC protobuf::libprotobuf)
+  else()
+    # Fallback for older CMake/protobuf packages
+    target_link_libraries(msg_protos PUBLIC ${Protobuf_LIBRARIES})
+  endif()
+
+  # On some systems, protobuf does not propagate Abseil dependencies.
+  # Try to link Abseil log internals explicitly if available to satisfy
+  # symbols like absl::log_internal::LogMessage* and MakeCheckOpString.
+  find_package(absl CONFIG QUIET)
+  if(absl_FOUND)
+    foreach(absl_lib IN ITEMS log_internal log_internal_check_op raw_logging_internal strings base)
+      if(TARGET absl::${absl_lib})
+        target_link_libraries(msg_protos PUBLIC absl::${absl_lib})
+      endif()
+    endforeach()
+  endif()
   target_compile_definitions(msg_protos PUBLIC HAS_PROTOBUF=1)
   target_compile_features(msg_protos PUBLIC cxx_std_20)
 
