write ping and pong applications

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,8 @@
 add_executable(toy-sequencer 
     main.cpp
+    applications/ping_pong.cpp
     core/multicast_sender.cpp
+    core/inproc_multicast.cpp
     applications/sequencer.cpp
     applications/receiver.cpp
 )
