build in release to avoid protobuf linker error

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,9 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
+# removing this will cause a linker error on arm64
+set(CMAKE_BUILD_TYPE Release)
+
 include(CTest)
 enable_testing()
 
